--- a/src/output.css
+++ b/src/output.css
@@ -533,6 +533,9 @@
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
   }
+  .py-35 {
+    padding-block: calc(var(--spacing) * 35);
+  }
   .py-50 {
     padding-block: calc(var(--spacing) * 50);
   }
@@ -682,9 +685,24 @@
       padding-inline: calc(var(--spacing) * 3);
     }
   }
+  .md\:px-4 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 4);
+    }
+  }
   .md\:px-5 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 5);
+    }
+  }
+  .md\:px-6 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 6);
+    }
+  }
+  .md\:px-8 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 8);
     }
   }
   .md\:px-10 {
