--- a/src/output.css
+++ b/src/output.css
@@ -13,10 +13,8 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --font-weight-bold: 700;
-    --leading-normal: 1.5;
     --radius-sm: 0.25rem;
     --radius-2xl: 1rem;
-    --radius-4xl: 2rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -191,9 +189,6 @@
   .mt-7 {
     margin-top: calc(var(--spacing) * 7);
   }
-  .mt-8 {
-    margin-top: calc(var(--spacing) * 8);
-  }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
@@ -215,9 +210,6 @@
   .hidden {
     display: none;
   }
-  .table {
-    display: table;
-  }
   .h-100 {
     height: calc(var(--spacing) * 100);
   }
@@ -226,6 +218,15 @@
   }
   .h-200 {
     height: calc(var(--spacing) * 200);
+  }
+  .w-30 {
+    width: calc(var(--spacing) * 30);
+  }
+  .w-59 {
+    width: calc(var(--spacing) * 59);
+  }
+  .w-300 {
+    width: calc(var(--spacing) * 300);
   }
   .w-\[90\%\] {
     width: 90%;
@@ -236,20 +237,11 @@
   .max-w-300 {
     max-width: calc(var(--spacing) * 300);
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .resize {
-    resize: both;
-  }
   .flex-col {
     flex-direction: column;
   }
   .flex-col-reverse {
     flex-direction: column-reverse;
-  }
-  .flex-row {
-    flex-direction: row;
   }
   .items-center {
     align-items: center;
@@ -281,15 +273,14 @@
   .gap-15 {
     gap: calc(var(--spacing) * 15);
   }
+  .overflow-auto {
+    overflow: auto;
+  }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
   .rounded-sm {
     border-radius: var(--radius-sm);
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .border-2 {
     border-style: var(--tw-border-style);
@@ -372,14 +363,8 @@
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
-  .px-4 {
-    padding-inline: calc(var(--spacing) * 4);
-  }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
-  }
-  .px-7 {
-    padding-inline: calc(var(--spacing) * 7);
   }
   .px-9 {
     padding-inline: calc(var(--spacing) * 9);
@@ -398,9 +383,6 @@
   }
   .px-22 {
     padding-inline: calc(var(--spacing) * 22);
-  }
-  .px-25 {
-    padding-inline: calc(var(--spacing) * 25);
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -472,43 +454,20 @@
   .text-\[\#3881C6\] {
     color: #3881C6;
   }
-  .text-\[50x\] {
-    color: 50x;
-  }
   .text-\[gray\] {
     color: gray;
   }
-  .text-\[gry\] {
-    color: gry;
-  }
   .text-white {
     color: var(--color-white);
-  }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .md\:m-auto {
     @media (width >= 48rem) {
       margin: auto;
     }
   }
-  .md\:mt-1 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 1);
-    }
-  }
   .md\:mt-10 {
     @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * 10);
-    }
-  }
-  .md\:mt-13 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 13);
     }
   }
   .md\:mt-14 {
@@ -591,11 +550,6 @@
       gap: calc(var(--spacing) * 0);
     }
   }
-  .md\:gap-3 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 3);
-    }
-  }
   .md\:gap-5 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 5);
@@ -646,11 +600,6 @@
       padding-inline: calc(var(--spacing) * 15);
     }
   }
-  .md\:px-20 {
-    @media (width >= 48rem) {
-      padding-inline: calc(var(--spacing) * 20);
-    }
-  }
   .md\:py-3 {
     @media (width >= 48rem) {
       padding-block: calc(var(--spacing) * 3);
@@ -699,11 +648,6 @@
   .lg\:mt-7 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 7);
-    }
-  }
-  .lg\:mt-8 {
-    @media (width >= 64rem) {
-      margin-top: calc(var(--spacing) * 8);
     }
   }
   .lg\:mt-9 {
@@ -759,11 +703,6 @@
   .lg\:h-175 {
     @media (width >= 64rem) {
       height: calc(var(--spacing) * 175);
-    }
-  }
-  .lg\:w-0 {
-    @media (width >= 64rem) {
-      width: calc(var(--spacing) * 0);
     }
   }
   .lg\:w-50 {
@@ -851,16 +790,6 @@
       gap: calc(var(--spacing) * 25);
     }
   }
-  .lg\:gap-30 {
-    @media (width >= 64rem) {
-      gap: calc(var(--spacing) * 30);
-    }
-  }
-  .lg\:gap-40 {
-    @media (width >= 64rem) {
-      gap: calc(var(--spacing) * 40);
-    }
-  }
   .lg\:px-10 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 10);
@@ -889,11 +818,6 @@
   .lg\:py-0 {
     @media (width >= 64rem) {
       padding-block: calc(var(--spacing) * 0);
-    }
-  }
-  .lg\:py-3 {
-    @media (width >= 64rem) {
-      padding-block: calc(var(--spacing) * 3);
     }
   }
   .lg\:py-5 {
@@ -931,17 +855,11 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
     }
   }
 }
